#71 자바스크립트 콜백순서 버그 해결

--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -1006,9 +1006,14 @@
 
     }
 
+    // 비동기 순차처리
     Tg_total();
+    setTimeout(function () {
+        GetProject();
+    },170)
     GetDashBoard();
-    GetProject();
+
+    GetDashBoard();
 </script>
 </body>
 
