--- a/ui/html/setting/person-setting.html
+++ b/ui/html/setting/person-setting.html
@@ -60,6 +60,21 @@
                             class="la la-circle"></i><span style="font-size:0.8em;">SMTP 설정</span></a></li>
                 </ul>
             </li>
+            <li class="header">Help</li>
+            <li class="has-children"><a href="javascript:"><i class="la la-question"></i><span>도움말</span>
+                <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
+            </a>
+                <ul class="tree">
+                    <li class="tree-item"><a href="/help/project"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">프로젝트 관리</span></a></li>
+                    <li class="tree-item"><a href="/help/target"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">대상 관리</span></a></li>
+                    <li class="tree-item"><a href="/help/template"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">템플릿 관리</span></a></li>
+                    <li class="tree-item"><a href="/help/smtp"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">SMTP 설정</span></a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </div>
@@ -122,7 +137,8 @@
                                                                                   id="password_check"><label>새 비밀번호
                                     확인</label></div>
                             </form>
-                            <button class="btn btn-primary btn-lg btn-block" onclick="new SetUserSetting()">저 장</button>
+                            <button class="btn btn-secondary btn-lg btn-block" onclick="SetUserSetting()">저 장</button>
+                            <button class="btn btn-primary btn-lg btn-block" onclick="deleteAccount()">회원 탈퇴</button>
                         </div>
                     </div>
                 </div>
@@ -199,6 +215,28 @@
         r.send(JSON.stringify(formData));
     }
 
+    function deleteAccount() {
+        if (!confirm('회원 탈퇴하시겠습니까?')){
+            return
+        }
+
+        const r = new XMLHttpRequest();
+        r.open('POST', 'http://localhost:5000/setting/delUser', true);
+        r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+        r.withCredentials = true;
+        r.onreadystatechange = function () {
+            if (r.readyState === 4) {
+                if (r.status === 200) {
+                    alert("정상적으로 계정이 삭제되었습니다.");
+                    Logout();
+                } else {
+                    alert("계정 삭제 실패했습니다.")
+                }
+            }
+        };
+        r.send();
+        
+    }
 </script>
 </body>
 
