자바스크립트 비동기처리

--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -1008,11 +1008,10 @@
 
     // 비동기 순차처리
     Tg_total();
-    setTimeout(function () {
-        GetProject();
-    },170)
-    GetDashBoard();
-
+    // setTimeout(function () {
+    //     GetProject();
+    // },170)
+    GetProject();
     GetDashBoard();
 </script>
 </body>
