#118 프로젝트 수 10개 제한

--- a/ui/html/dashboard/main.html
+++ b/ui/html/dashboard/main.html
@@ -637,9 +637,9 @@
                                 if (rObj.project_list[i].p_status === "0") {
                                     status_tag += '<label class="badge badge-green">' + '예약' + '</label>'
                                 } else if (rObj.project_list[i].p_status === "1") {
-                                    status_tag += '<label class="badge badge-red">' + '진행중' + '</label>'
+                                    status_tag += '<label class="badge badge-blue">' + '진행중' + '</label>'
                                 } else if (rObj.project_list[i].p_status === "2") {
-                                    status_tag += '<label class="badge badge-blue">' + '종료' + '</label>'
+                                    status_tag += '<label class="badge badge-red">' + '종료' + '</label>'
                                 } else if (rObj.project_list[i].p_status === "3") {
                                     status_tag += '<label class="badge badge-info">' + '오류' + '</label>'
                                 }
