--- a/ui/html/warn/google1.html
+++ b/ui/html/warn/google1.html
@@ -84,8 +84,7 @@
                         <td style="">
                             <span>본인의 기기가 아닌가요?</span>
                             <a href="http://localhost:8888/warn/google2?{{link_ip}}"
-                               style="color: #4285f4; text-decoration: none;" target="_blank" rel="noreferrer noopener">계정
-                                보호하기</a>
+                               style="color: #4285f4; text-decoration: none;" target="_blank" rel="noreferrer noopener">계정 보호하기</a>
                         </td>
                     </tr>
                     </tbody>
