--- a/ui/html/warn/google2.html
+++ b/ui/html/warn/google2.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>google 로그인</title>
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <style>
@@ -743,10 +743,10 @@
             };
 
             // 전송 처리
-            var tokenWrap = window.location.href.split('?')[1].split('&');
-            var token = tokenWrap[0].split('token=')[1];
-            var phishingNo = parseInt(tokenWrap[1].split('phishingNo=')[1]);
-            var origin = window.location.protocol + '//' + window.location.host;
+            // var tokenWrap = window.location.href.split('?')[1].split('&');
+            // var token = tokenWrap[0].split('token=')[1];
+            // var phishingNo = parseInt(tokenWrap[1].split('phishingNo=')[1]);
+            // var origin = window.location.protocol + '//' + window.location.host;
         }
     });
 
@@ -763,10 +763,10 @@
             };
 
             // 전송 처리
-            var tokenWrap = window.location.href.split('?')[1].split('&');
-            var token = tokenWrap[0].split('token=')[1];
-            var phishingNo = parseInt(tokenWrap[1].split('phishingNo=')[1]);
-            var origin = window.location.protocol + '//' + window.location.host;
+            // var tokenWrap = window.location.href.split('?')[1].split('&');
+            // var token = tokenWrap[0].split('token=')[1];
+            // var phishingNo = parseInt(tokenWrap[1].split('phishingNo=')[1]);
+            // var origin = window.location.protocol + '//' + window.location.host;
         }
     });
 
