#124 | 프로젝트 관리 페이지 속성명 변경

--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -387,10 +387,10 @@
                                     <th>진행상태</th>
                                     <th>템플릿명</th>
                                     <th>대상자 수</th>
-                                    <th>전송 현황(%)</th>
-                                    <th>열람 현황(%)</th>
-                                    <th>접속 현황(%)</th>
-                                    <th>감염 현황(%)</th>
+                                    <th>메일 전송 현황(%)</th>
+                                    <th>메일 열람 현황(%)</th>
+                                    <th>Link 접속 현황(%)</th>
+                                    <th>File 실행 현황(%)</th>
                                     <th>시작일</th>
                                     <th>종료일</th>
                                 </tr>
