--- a/ui/html/setting/smtp-setting.html
+++ b/ui/html/setting/smtp-setting.html
@@ -199,6 +199,7 @@
 
     // CheckLogin();
     GetSmtpSetting();
+    GetDashBoard();
 
     function SetSmtpSetting() {
         const hostname = $('#hostname').val();
